update makefile for prime machines

--- a/proj2/makefile
+++ b/proj2/makefile
@@ -1,9 +1,10 @@
+#!/bin/bash
 len_min = 1
 len_max = 10
 all: a.out word_occurrence letter_occurrence
 
 word_occurrence:
-	if ! [ -d "./word_occurrence" ]; then mkdir word_occurrence; fi
+	if [ ! -d "./word_occurrence" ]; then mkdir word_occurrence; fi
 	./a.out -min $(len_min) -max $(len_max) -asclength ./books/* > ./word_occurrence/all
 	./a.out -min $(len_min) -max $(len_max) -asclength ./books/alice_in_wonderland_nows > ./word_occurrence/alice_in_wonderland_nows
 	./a.out -min $(len_min) -max $(len_max) -asclength ./books/einstein_relativity_nows > ./word_occurrence/einstein_relativity_nows
@@ -15,7 +16,7 @@ word_occurrence:
 	./a.out -min $(len_min) -max $(len_max) -asclength ./books/wood_carving_nows > ./word_occurrence/wood_carving_nows
 
 letter_occurrence:
-	if ! [ -d "./letter_occurrence" ]; then mkdir letter_occurrence; fi
+	if [ ! -d "./letter_occurrence" ]; then mkdir letter_occurrence; fi
 	./a.out -min 1 -max 1 ./books/* > ./letter_occurrence/all
 	./a.out -min 1 -max 1 ./books/alice_in_wonderland_nows > ./letter_occurrence/alice_in_wonderland_nows
 	./a.out -min 1 -max 1 ./books/einstein_relativity_nows > ./letter_occurrence/einstein_relativity_nows
@@ -27,8 +28,8 @@ letter_occurrence:
 	./a.out -min 1 -max 1 ./books/wood_carving_nows > ./letter_occurrence/wood_carving_nows
 
 a.out: counting_prime.c counting.c
-	gcc counting_prime.c
-	gcc counting.c
+	-gcc counting.c
+	-gcc counting_prime.c
 
 
 clean:
